--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       margin: 0;
       padding: 20px;
       background: #f4f4f4;
-      line-height: 1.6;
     }
     .container {
       max-width: 600px;
@@ -44,6 +43,13 @@
       margin: 10px 0;
       font-weight: bold;
     }
+    img {
+      width: 100%;
+      border-radius: 10px;
+      margin-top: 10px;
+      margin-bottom: 15px;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    }
     footer {
       text-align: center;
       margin-top: 30px;
@@ -57,23 +63,26 @@
   <div class="container">
     <h2>Moshi Setup Guide</h2>
 
+    <!-- Image Example -->
+    <img src="https://api.iconify.design/mdi:image-edit-outline.svg?size=200&color=%230070f3" alt="Resize Photo">
+
     <p><strong>📌 Website Resize Foto:</strong><br>
       <a href="https://squareanimage.com" target="_blank">https://squareanimage.com</a>
     </p>
 
-    <div class="ip-box">
-      🔌 IP Moshi: <span>192.168.4.1</span>
-    </div>
+    <div class="ip-box">🔌 IP Moshi: 192.168.4.1</div>
 
+    <img src="https://img.youtube.com/vi/Z0HlMs_Ez6g/hqdefault.jpg" alt="Resize Tutorial">
     <p><strong>📹 Tutorial Resize Foto:</strong><br>
       <a href="https://youtube.com/shorts/Z0HlMs_Ez6g?si=xWeAU5QTiio0v2Qz" target="_blank">
-      https://youtube.com/shorts/Z0HlMs_Ez6g?si=xWeAU5QTiio0v2Qz
+        Klik di sini untuk nonton tutorial
       </a>
     </p>
 
+    <img src="https://img.youtube.com/vi/c-NVU5qXgVM/hqdefault.jpg" alt="Connect Moshi Tutorial">
     <p><strong>📹 Tutorial Konek Moshi:</strong><br>
       <a href="https://youtube.com/shorts/c-NVU5qXgVM?si=1_Tj_qrGRC1Sq8mM" target="_blank">
-      https://youtube.com/shorts/c-NVU5qXgVM?si=1_Tj_qrGRC1Sq8mM
+        Klik di sini untuk nonton tutorial
       </a>
     </p>
 
@@ -83,8 +92,6 @@
     </div>
   </div>
 
-  <footer>
-    © 2025 — Moshi Helper Page
-  </footer>
+  <footer>© 2025 — Moshi Helper Page</footer>
 </body>
 </html>
