--- a/index.html
+++ b/index.html
@@ -1,61 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Moshi Setup Guide</title>
 
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: system-ui, sans-serif;
+      background: #f5f5f7;
       margin: 0;
       padding: 20px;
-      background: #f4f4f4;
     }
+
     .container {
-      max-width: 600px;
+      max-width: 480px;
       margin: auto;
       background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      padding: 24px;
+      border-radius: 14px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.06);
     }
+
     h2 {
       text-align: center;
+      font-size: 22px;
+      margin-bottom: 20px;
     }
-    a {
-      color: #0070f3;
-      text-decoration: none;
-      font-weight: bold;
+
+    .section {
+      margin-bottom: 22px;
     }
-    .note {
-      background: #fff3cd;
-      padding: 10px;
-      border-left: 4px solid #e0b200;
-      margin-top: 15px;
-      border-radius: 6px;
+
+    .img-wrapper {
+      display: flex;
+      justify-content: center;
     }
-    .ip-box {
-      background: #e3f7ff;
-      padding: 10px;
-      border-left: 4px solid #0096d6;
-      border-radius: 6px;
-      margin: 10px 0;
-      font-weight: bold;
-    }
+
     img {
-      width: 100%;
-      border-radius: 10px;
-      margin-top: 10px;
-      margin-bottom: 15px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+      width: 80%;
+      max-width: 260px;
+      border-radius: 12px;
+      margin: 12px 0;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.08);
     }
+
+    a {
+      display: block;
+      text-decoration: none;
+      color: #0070f3;
+      background: #eef5ff;
+      padding: 10px;
+      border-radius: 10px;
+      text-align: center;
+      transition: 0.2s;
+      font-weight: 600;
+    }
+
+    a:hover {
+      background: #dceaff;
+    }
+
+    .label {
+      margin-bottom: 6px;
+      font-weight: 600;
+    }
+
+    .ip-box {
+      background: #e8faff;
+      padding: 12px;
+      border-radius: 10px;
+      text-align: center;
+      font-weight: 600;
+      border: 1px solid #bfefff;
+      margin-bottom: 20px;
+    }
+
+    .note {
+      background: #fff7cd;
+      padding: 14px;
+      border-radius: 10px;
+      text-align: center;
+      margin-top: 10px;
+    }
+
     footer {
       text-align: center;
-      margin-top: 30px;
-      font-size: 14px;
-      opacity: 0.6;
+      margin-top: 35px;
+      font-size: 13px;
+      color: #777;
     }
+
   </style>
 </head>
 
@@ -63,32 +98,28 @@
   <div class="container">
     <h2>Moshi Setup Guide</h2>
 
-    <!-- Image Example -->
-    <img src="https://api.iconify.design/mdi:image-edit-outline.svg?size=200&color=%230070f3" alt="Resize Photo">
+    <div class="ip-box">🔌 IP Moshi: <strong>192.168.4.1</strong></div>
 
-    <p><strong>📌 Website Resize Foto:</strong><br>
-      <a href="https://squareanimage.com" target="_blank">https://squareanimage.com</a>
-    </p>
+    <div class="section">
+      <div class="label">📌 Resize Photo:</div>
+      <div class="img-wrapper"><img src="https://api.iconify.design/material-symbols:photo-size-select-large.svg?color=%230070f3&size=120" alt=""></div>
+      <a href="https://squareanimage.com" target="_blank">Open Resize Tool</a>
+    </div>
 
-    <div class="ip-box">🔌 IP Moshi: 192.168.4.1</div>
+    <div class="section">
+      <div class="label">📹 Tutorial Resize Foto:</div>
+      <div class="img-wrapper"><img src="https://img.youtube.com/vi/Z0HlMs_Ez6g/mqdefault.jpg" alt=""></div>
+      <a href="https://youtube.com/shorts/Z0HlMs_Ez6g?si=xWeAU5QTiio0v2Qz" target="_blank">Watch Tutorial</a>
+    </div>
 
-    <img src="https://img.youtube.com/vi/Z0HlMs_Ez6g/hqdefault.jpg" alt="Resize Tutorial">
-    <p><strong>📹 Tutorial Resize Foto:</strong><br>
-      <a href="https://youtube.com/shorts/Z0HlMs_Ez6g?si=xWeAU5QTiio0v2Qz" target="_blank">
-        Klik di sini untuk nonton tutorial
-      </a>
-    </p>
-
-    <img src="https://img.youtube.com/vi/c-NVU5qXgVM/hqdefault.jpg" alt="Connect Moshi Tutorial">
-    <p><strong>📹 Tutorial Konek Moshi:</strong><br>
-      <a href="https://youtube.com/shorts/c-NVU5qXgVM?si=1_Tj_qrGRC1Sq8mM" target="_blank">
-        Klik di sini untuk nonton tutorial
-      </a>
-    </p>
+    <div class="section">
+      <div class="label">📹 Tutorial Konek Moshi:</div>
+      <div class="img-wrapper"><img src="https://img.youtube.com/vi/c-NVU5qXgVM/mqdefault.jpg" alt=""></div>
+      <a href="https://youtube.com/shorts/c-NVU5qXgVM?si=1_Tj_qrGRC1Sq8mM" target="_blank">Watch Tutorial</a>
+    </div>
 
     <div class="note">
-      ⚠️ <strong>NOTE:</strong><br>
-      Jangan masukkan foto sebelum di-resize terlebih dahulu!
+      ⚠️ Jangan upload foto sebelum resize!
     </div>
   </div>
 
