--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <div class="section">
       <div class="label">📌 Resize Photo:</div>
-      <div class="img-wrapper"><img src="https://api.iconify.design/material-symbols:photo-size-select-large.svg?color=%230070f3&size=120" alt=""></div>
+      <div class="img-wrapper"><img src="./assets/crop.png" alt="Resize Icon"></div>
       <a href="https://squareanimage.com" target="_blank">Open Resize Tool</a>
     </div>
 
