--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="ip-box">🔌 IP Moshi: <strong>192.168.4.1</strong></div>
 
     <div class="section">
-      <div class="label">📌 Resize Photo:</div>
+      <div class="label">📌 Resize Photo Link:</div>
       <div class="img-wrapper"><img src="./assets/crop.png" alt="Resize Icon"></div>
       <a href="https://squareanimage.com" target="_blank">Open Resize Tool</a>
     </div>
@@ -113,16 +113,16 @@
     </div>
 
     <div class="section">
-      <div class="label">📹 Tutorial Konek Moshi:</div>
+      <div class="label">📹 Tutorial connect Moshi:</div>
       <div class="img-wrapper"><img src="https://img.youtube.com/vi/c-NVU5qXgVM/mqdefault.jpg" alt=""></div>
       <a href="https://youtube.com/shorts/c-NVU5qXgVM?si=1_Tj_qrGRC1Sq8mM" target="_blank">Watch Tutorial</a>
     </div>
 
     <div class="note">
-      ⚠️ Jangan upload foto sebelum resize!
+      ⚠️ Dont upload photo before resize!
     </div>
   </div>
 
-  <footer>© 2025 — Moshi Helper Page</footer>
+  <footer>© 2025 — Moshi Helper By yona Airdrop Rebahan</footer>
 </body>
 </html>
