--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
       margin-bottom: 20px;
     }
 
+    .info-box {
+      background: #e6f7ff;
+      padding: 14px;
+      border-radius: 10px;
+      text-align: center;
+      font-weight: 600;
+      border: 1px solid #bdeaff;
+      margin-bottom: 14px;
+      line-height: 1.6;
+    }
+
     .section {
       margin-bottom: 22px;
     }
@@ -66,16 +77,6 @@
       font-weight: 600;
     }
 
-    .ip-box {
-      background: #e8faff;
-      padding: 12px;
-      border-radius: 10px;
-      text-align: center;
-      font-weight: 600;
-      border: 1px solid #bfefff;
-      margin-bottom: 20px;
-    }
-
     .note {
       background: #fff7cd;
       padding: 14px;
@@ -90,7 +91,6 @@
       font-size: 13px;
       color: #777;
     }
-
   </style>
 </head>
 
@@ -98,7 +98,14 @@
   <div class="container">
     <h2>Moshi Setup Guide</h2>
 
-    <div class="ip-box">🔌 IP Moshi: <strong>192.168.4.1</strong></div>
+    <div class="info-box">
+      📡 Connect WiFi: <strong>moshi</strong> <br>
+      🔑 Password: <strong>123456</strong>
+    </div>
+
+    <div class="info-box">
+      🔌 IP Moshi: <strong>192.168.4.1</strong>
+    </div>
 
     <div class="section">
       <div class="label">📌 Resize Photo Link:</div>
@@ -113,13 +120,13 @@
     </div>
 
     <div class="section">
-      <div class="label">📹 Tutorial connect Moshi:</div>
+      <div class="label">📹 Tutorial Connect Moshi:</div>
       <div class="img-wrapper"><img src="https://img.youtube.com/vi/c-NVU5qXgVM/mqdefault.jpg" alt=""></div>
       <a href="https://youtube.com/shorts/c-NVU5qXgVM?si=1_Tj_qrGRC1Sq8mM" target="_blank">Watch Tutorial</a>
     </div>
 
     <div class="note">
-      ⚠️ Dont upload photo before resize!
+      ⚠️ Don't upload photo before resizing!
     </div>
   </div>
 
