--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <div class="info-box">
       📡 Connect WiFi: <strong>moshi</strong> <br>
-      🔑 Password: <strong>123456</strong>
+      🔑 Password: <strong>12345678</strong>
     </div>
 
     <div class="info-box">
