--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="section">
       <div class="label">📌 Resize Photo Link:</div>
       <div class="img-wrapper"><img src="./assets/crop.png" alt="Resize Icon"></div>
-      <a href="https://squareanimage.com" target="_blank">Open Resize Tool</a>
+      <a href="https://moshi-resizer.vercel.app" target="_blank">Open Resize Tool</a>
     </div>
 
     <div class="section">
