--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
 
     <div class="note">
-      ⚠️ Don't upload photo before resizing!
+      ⚠️ Don't upload photo before resize!
     </div>
   </div>
 
