--- a/index.html
+++ b/index.html
@@ -43,6 +43,21 @@
       margin-bottom: 22px;
     }
 
+    .list-box {
+      background: #f7f7f7;
+      padding: 16px;
+      border-radius: 10px;
+      border: 1px solid #e5e5e5;
+      margin-bottom: 16px;
+    }
+
+    .list-box ul {
+      margin: 0;
+      padding-left: 20px;
+      font-size: 15px;
+      line-height: 1.7;
+    }
+
     .img-wrapper {
       display: flex;
       justify-content: center;
@@ -105,6 +120,18 @@
 
     <div class="info-box">
       🔌 IP Moshi: <strong>192.168.4.1</strong>
+    </div>
+
+    <!-- ⭐ New Features Section -->
+    <div class="list-box">
+      <strong>✨ Features:</strong>
+      <ul>
+        <li>Tap Tap</li>
+        <li>Shake</li>
+        <li>Custom Photo</li>
+        <li>Clock</li>
+      </ul>
+      <small style="opacity: 0.55;">Note: for International no-battery version</small>
     </div>
 
     <div class="section">
